# convex-hull

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.vue  main.ts  shims-vue.d.ts
client/src/assets/: base.scss
client/src/components/: ConvexHullPlot.scss  ConvexHullPlot.ts  ConvexHullPlot.vue  store.ts
client/src/components/ConvexHullCards/: ConvexHullCards.scss  ConvexHullCards.ts  ConvexHullCards.vue
client/src/components/ConvexHullCards/ConvexHullCard/: ConvexHullCard.scss  ConvexHullCard.ts  ConvexHullCard.vue
client/src/components/ConvexHullCreator/: ConvexHullCreator.ts  ConvexHullCreator.vue
client/src/components/ConvexHullPlot/: ConvexHullPlot.ts  ConvexHullPlot.vue
client/src/models/: convex-hull.ts  coordinates.ts  point.ts
client/src/services/: convex-hull.service.ts
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2022-05-02-095722_convex_hulls/: down.sql  up.sql
src/: convex_hull_service.rs  db.rs  graham_scan.rs  main.rs  models.rs  schema.rs  stack.rs
web-server/: package-lock.json  package.json
web-server/src/: app.module.ts
